--- a/福利姬频道总目录/byoru全集/menu.html
+++ b/福利姬频道总目录/byoru全集/menu.html
@@ -53,7 +53,13 @@
   <p><a href="https://telegra.ph/Byoru-Fubuki-08-24">Byoru Fubuki</a></p>
   <p><a href="https://telegra.ph/byoru-Jackal-47P-252MB-08-24">byoru Jackal [47P-252MB]</a></p>
   <p><a href="https://telegra.ph/byoru-Yor-Forger-49P-194MB-08-24">byoru Yor Forger [49P-194MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/byoru-Guitar-Sister55P7V-771MB-08-25">byoru Guitar Sister[55P7V-771MB]</a></p>
+  <p><a href="https://telegra.ph/byoru-Nezuko-47P1V-786MB-08-25">byoru Nezuko [47P1V-786MB]</a></p>
+  <p><a href="https://telegra.ph/Morrigan-32P-326MB-08-25">byoru Morrigan [32P-326MB]</a></p>
+  <p><a href="https://telegra.ph/Makima-Succubus-16P-98MB-08-25">byoru Makima Succubus [16P-98MB]</a></p>
+  <p><a href="https://telegra.ph/Lucy-25P-305MB-08-25">byoru Lucy [25P-305MB]</a></p>
+  <p><a href="https://telegra.ph/Bomb-Devil-38P-179MB-08-25">byoru Bomb Devil [38P-179MB]</a></p>
+  <p><a href="https://telegra.ph/Sally-Makima-x-Power-25P-114MB-08-25">byoru &Sally Makima x Power [25P-114MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
 </body>
 </html>
