--- a/福利姬频道总目录/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
+++ b/福利姬频道总目录/布丁大法 米布丁&油布丁 再来一勺大布丁全集/menu.html
@@ -58,8 +58,15 @@
   <p><a href="https://telegra.ph/布丁大法-你的小熊-08-24">布丁大法 你的小熊</a></p>
   <p><a href="https://telegra.ph/布丁大法-S3糯米糕35P3V-242M-08-24">布丁大法 S3糯米糕[35P3V-242M]</a></p>
   <p><a href="https://telegra.ph/布丁大法-C6热可可-08-24">布丁大法 C6热可可</a></p>
-  <p><a href="../index.html">返回总目录</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="https://telegra.ph/布丁-C6-热可可-08-24">布丁 C6 热可可</a></p>
+  <p><a href="https://telegra.ph/布丁-S4-羊奶冻冻-08-24">布丁 S4 羊奶冻冻</a></p>
+  <p><a href="https://telegra.ph/布丁-C5海盐荔枝-08-25">布丁 C5海盐荔枝</a></p>
+  <p><a href="https://telegra.ph/布丁大法-情趣-34P2V-183MB-08-25">布丁大法 情趣 [34P2V-183MB]</a></p>
+  <p><a href="https://telegra.ph/布丁大法-豆沙乳63P-304M-08-25">布丁大法 豆沙乳[63P-304M</a></p>  
+  <p><a href="https://telegra.ph/布丁大法-黑丝蜜桃15P-72M-08-25">布丁大法 黑丝蜜桃[15P-72M]</a></p>
+  <p><a href="https://telegra.ph/布丁大法-衬衫吊带黑丝24P1V-252M-08-25">布丁大法 衬衫吊带黑丝[24P1V-252M]</a></p>
+  <p><a href="https://telegra.ph/布丁大法-黑色旗袍44P3V-294M-08-25">布丁大法 黑色旗袍[44P3V-294M]</a></p>
+  <p><a href="https://telegra.ph/布丁大法-黑色毛衣23P1V-143M-08-25">布丁大法 黑色毛衣[23P1V-143M]</a></p>
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p> 
