--- a/福利姬频道总目录/星之迟迟全集/menu.html
+++ b/福利姬频道总目录/星之迟迟全集/menu.html
@@ -100,5 +100,13 @@
   <p><a href="https://telegra.ph/星之迟迟-08-24-5">星之迟迟</a></p>
   <p><a href="https://telegra.ph/星之迟迟-08-24-6">星之迟迟</a></p>
   <p><a href="https://telegra.ph/星之迟迟-08-24-7">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-24-8">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-24-9">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-08-24-10">星之迟迟</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-圣诞赠品-黑贞1月21打赏群资源-08-25">星之迟迟 圣诞赠品-黑贞（1月21打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-约尔-圣诞21月21打赏群资源-08-25">星之迟迟 约尔-圣诞2（1月21打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-约尔-圣诞31月21打赏群资源-08-25">星之迟迟 约尔-圣诞3（1月21打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-约尔-圣诞1-私服-08-25">星之迟迟 约尔 圣诞1 私服</a></p>
+  <p><a href="https://telegra.ph/星之迟迟-11月计划D-原创-同学妈妈的招待12月7打赏群资源-08-25">星之迟迟 11月计划D 原创 同学妈妈的招待（12月7打赏群资源）</a></p>
 </body>
 </html>
