--- a/福利姬频道总目录/末夜787全集/menu.html
+++ b/福利姬频道总目录/末夜787全集/menu.html
@@ -20,7 +20,9 @@
   <p><a href="https://telegra.ph/%E6%9C%AB%E5%A4%9C-%E7%89%B9%E5%88%AB%E7%9A%84%E5%AE%A0%E7%89%A9-08-23">末夜 特别的宠物</a></p>
   <p><a href="https://telegra.ph/末夜787-机器人女友-08-24">末夜787 机器人女友</a></p>
   <p><a href="https://telegra.ph/末夜787-白色泳装-08-24">末夜787 白色泳装</a></p>
-
+  <p><a href="https://telegra.ph/末夜787-蕾姆女仆泳装-47P-407MB-08-25">末夜787 蕾姆女仆泳装 [47P-407MB]</a></p>
+  <p><a href="https://telegra.ph/末夜787-禁忌之恋-猫娘-56P-769MB-08-25">末夜787 禁忌之恋 猫娘 [56P-769MB]</a></p>
+  <p><a href="https://telegra.ph/末夜787-碧蓝航线-光辉魅魔-40P-105GB-08-25">末夜787 碧蓝航线 光辉魅魔 [40P-1.05GB]</a></p>
 
 </body>
 </html>
