--- a/福利姬频道总目录/桜桃喵全集/menu.html
+++ b/福利姬频道总目录/桜桃喵全集/menu.html
@@ -32,9 +32,16 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E7%8F%8A%E7%91%9A%E5%AE%AB%E5%BF%83%E6%B5%B7%E5%8E%9F%E7%A5%9E-08-23">桜桃喵 珊瑚宫心海（原神）</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E6%9E%9C%E5%A4%8F-36p-08-23">桜桃喵 果夏 36p</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E5%96%9C%E5%A4%9A%E5%B7%9D%E6%B5%B7%E6%A2%A6-%E9%AD%85%E9%AD%94-66p1v-08-23">桜桃喵 喜多川海梦 魅魔 66p1v</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-雪糕糕40p4月3打赏群资源-08-24">桜桃喵 雪糕糕40p（4月3打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-草莓莓33p4月3打赏群资源-08-24">桜桃喵 草莓莓33p（4月3打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-玛奇玛-37p3月11打赏群资源-08-25">桜桃喵 玛奇玛 37p（3月11打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-盛夏服2月19打赏群资源-08-25">桜桃喵 盛夏服（2月19打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-小白兔21月14打赏群资源-08-25">桜桃喵 小白兔2（1月14打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-小白兔11月14打赏群资源-08-25">桜桃喵 小白兔1（1月14打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-雷电将军12月9打赏群资源-08-25">桜桃喵 雷电将军（12月9打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-闪灵泳装-08-25">桜桃喵 闪灵泳装</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-蕾姆小睡裙-24P-410MB-08-25">桜桃喵 蕾姆小睡裙 [24P-410MB]</a></p>
+  <p><a href="https://telegra.ph/桜桃喵-天照LOLITA-21P-485MB-08-25">桜桃喵 天照LOLITA [21P-485MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
