--- a/福利姬频道总目录/洛璃LoLiSAMA全集/menu.html
+++ b/福利姬频道总目录/洛璃LoLiSAMA全集/menu.html
@@ -15,7 +15,19 @@
   <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83LoLiSAMA-%E7%94%B3%E9%B9%A4-83P1V-%E5%8E%9F%E7%A5%9E-08-22">洛璃LoLiSAMA 申鹤 83P1V (原神)</a></p>
   <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83LoLiSAMA-%E4%BA%BA%E9%B1%BC-85P-08-22">洛璃LoLiSAMA 人鱼 85P</a></p>
   <p><a href="https://telegra.ph/%E6%B4%9B%E7%92%83LoLiSAMA-%E5%9F%83%E5%A7%86%E7%99%BB-53P-08-23">洛璃LoLiSAMA 埃姆登 53P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-樫野-迷糊女仆-64P-681MB-08-24">洛璃LoLiSAMA 樫野 迷糊女仆 [64P-681MB]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-埃吉尔旗袍-金龙腾祥云-66P-876MB-08-24">洛璃LoLiSAMA 埃吉尔旗袍 金龙腾祥云 [66P-876MB]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-九月舰长维尔梅64P-783MB-08-24">洛璃LoLiSAMA 九月舰长《维尔梅》[64P-783MB]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-暗黑小红帽-08-24">洛璃LoLiSAMA 暗黑小红帽</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-喜多川海梦兔女郎-08-24">洛璃LoLiSAMA 喜多川海梦兔女郎</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-醉酒OL-剧情-104P1V-167GB-08-25">洛璃LoLiSAMA 醉酒OL 剧情 [104P1V-1.67GB]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-醉酒OL-104P1V-167GB-08-25">洛璃LoLiSAMA 醉酒OL [104P1V-1.67GB]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-巫女20-78P-108GB-08-25">洛璃LoLiSAMA 巫女2.0 [78P-1.08GB]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-雷电将军OL74P-08-25">洛璃LoLiSAMA 雷电将军OL[74P]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-JK62P-08-25">洛璃LoLiSAMA JK[62P]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-红兔-54P-532MB-08-25">洛璃LoLiSAMA 红兔 [54P-532MB]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-镇海56P-08-25">洛璃LoLiSAMA 镇海[56P]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-狼少女-狼女的调教130P-08-25">洛璃LoLiSAMA 狼少女 狼女的调教[130P]</a></p>
+  <p><a href="https://telegra.ph/洛璃LoLiSAMA-碧蓝航线-卡律布狄斯54P-08-25">洛璃LoLiSAMA 碧蓝航线 卡律布狄斯[54P]</a></p>
 </body>
 </html>
