--- a/福利姬频道总目录/焖焖碳全集/menu.html
+++ b/福利姬频道总目录/焖焖碳全集/menu.html
@@ -11,5 +11,11 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E7%84%96%E7%84%96%E7%A2%B3---%E5%B0%91%E5%A5%B3%E5%89%8D%E7%BA%BF-%E7%B4%A2%E7%B1%B3-%E6%B3%B3%E8%A3%8546P-150M-08-20">焖焖碳 - 少女前线 索米 泳装[46P-150M]</a></p> 
+  <p><a href="https://telegra.ph/焖焖碳-EVA-明日香2月28打赏群资源-08-24">焖焖碳 EVA 明日香（2月28打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-独角兽和服-30P-124MB-08-24">焖焖碳 独角兽和服 [30P-124MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-少女前线-HK416-08-24">焖焖碳 少女前线 HK416</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-能代-15P-132MB-08-25">焖焖碳 能代 [15P-132MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-恶毒兔头-15P-107MB-08-25">焖焖碳 恶毒兔头 [15P-107MB]</a></p>
+  <p><a href="https://telegra.ph/焖焖碳-麻辣兔头X异色兔-38P-345MB-08-25">焖焖碳 麻辣兔头X异色兔 [38P-345MB]</a></p>
 </body>
 </html>
