--- a/福利姬频道总目录/落落Raku全集/menu.html
+++ b/福利姬频道总目录/落落Raku全集/menu.html
@@ -19,7 +19,10 @@
   <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-%E6%88%90-%E4%BA%BA-%E5%BC%8F-08-23">落落Raku 成_人_式</a></p>
   <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDRaku-Happy-Birthday-Raku-08-23">落落Raku Happy Birthday, Raku!!</a></p>
   <p><a href="https://telegra.ph/%E8%90%BD%E8%90%BDraku-%E4%BC%BC%E6%B0%B4%E6%B5%81%E5%B9%B4-56P-08-23">落落raku 似水流年 56P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/落落raku-10月订阅-神待ち少女Night-LiLy1月30打赏群资源-08-25">落落raku 10月订阅 神待ち少女～Night LiLy～（1月30打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/落落raku-10月订阅-Trick-or-Treat-1月30打赏群资源-08-25">落落raku 10月订阅 Trick or Treat !!（1月30打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/落落Raku-Your-waifu1月21打赏群资源-08-25">落落Raku Your waifu♡（1月21打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/落落Raku-Dear-Deer-1月21打赏群资源-08-25">落落Raku Dear Deer ☆（1月21打赏群资源）</a></p>
   <p><a href="../index.html">返回总目录</a></p>				  
   <p><a href="../index.html">返回总目录</a></p>  
   <p><a href="../index.html">返回总目录</a></p>  
