--- a/福利姬频道总目录/蠢沫沫全集/menu.html
+++ b/福利姬频道总目录/蠢沫沫全集/menu.html
@@ -86,7 +86,17 @@
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E8%AF%BE%E9%97%B4-08-23">蠢沫沫 课间</a></p>
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%8D%88%E5%90%8E%E8%AF%BE%E9%97%B4-08-23">蠢沫沫 午后课间</a></p>   
   <p><a href="https://telegra.ph/%E8%A0%A2%E6%B2%AB%E6%B2%AB-%E5%85%B3%E4%BA%8E%E6%88%91%E5%AD%A6%E5%A6%B9%E6%98%AF%E4%B8%AA%E7%8C%AB%E5%A8%98%E8%BF%99%E4%BB%B6%E4%BA%8B-22P-244MB-08-23">蠢沫沫 关于我学妹是个猫娘这件事 [22P-244MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫小电车3月3打赏群资源-08-25">蠢沫沫《小电车》（3月3打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫漫步2月17打赏群资源-08-25">蠢沫沫《漫步》（2月17打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫野餐日2月15打赏群资源-08-25">蠢沫沫《野餐日》（2月15打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫废船记2月7打赏群资源-08-25">蠢沫沫《废船记》（2月7打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫杂货喵1月27打赏群资源-08-25">蠢沫沫《杂货喵》（1月27打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫-桃良阿宅同桌的你1月25打赏群资源-08-25">蠢沫沫 桃良阿宅《同桌的你》（1月25打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫水手日记1月11打赏群资源-08-25">蠢沫沫《水手日记》（1月11打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫棒球女孩1月2打赏群资源-08-25">蠢沫沫《棒球女孩》（1月2打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫-绵绵兔-08-25">蠢沫沫 绵绵兔</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫-双马尾小恶魔-16P-140M-08-25">蠢沫沫 双马尾小恶魔 [16P-140M]</a></p>
+  <p><a href="https://telegra.ph/蠢沫沫x桃良阿宅-莉可莉丝-08-25">蠢沫沫x桃良阿宅 莉可莉丝</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
