--- a/福利姬频道总目录/阿包也是兔娘全集/menu.html
+++ b/福利姬频道总目录/阿包也是兔娘全集/menu.html
@@ -29,7 +29,18 @@
   <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85-%E8%8A%B1%E5%9B%AD%E6%B3%B3%E8%A3%85-08-23">阿包 花园泳装</a></p>
   <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85%E4%B9%9F%E6%98%AF%E5%85%94%E5%A8%98-%E5%AE%89%E5%85%8B%E9%9B%B7%E5%A5%87%E6%B3%B3%E8%A3%85-36P-304MB-08-23">阿包也是兔娘 安克雷奇泳装 [36P-304MB]</a></p>
   <p><a href="https://telegra.ph/%E9%98%BF%E5%8C%85%E4%B9%9F%E6%98%AF%E5%85%94%E5%A8%98-%E5%85%94%E5%A5%B3%E9%83%8E-%E7%BE%8E%E7%94%98%E5%B0%BC%E7%A6%84-08-23">阿包也是兔娘 兔女郎 美甘尼禄</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-黑猫猫12月9打赏群资源-08-25">阿包也是兔娘 黑猫猫（12月9打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-九月舰长-高苗佑京-27P-415MB-08-25">阿包也是兔娘 九月舰长 高苗佑京 [27P-415MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-生或死联动-碧蓝航线-穗香泳装-30P-733MB-08-25">阿包也是兔娘 生或死联动 碧蓝航线 穗香泳装 [30P-733MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-生或死联动-碧蓝航线-穗香泳装-30P-733MB-08-25-2">阿包也是兔娘 生或死联动 碧蓝航线 穗香泳装 [30P-733MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-生或死联动-碧蓝航线-穗香泳装-30P-733MB-08-25-3">阿包也是兔娘 生或死联动 碧蓝航线 穗香泳装 [30P-733MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-七夕粉粉女仆-49P-553MB-08-25">阿包也是兔娘 七夕粉粉女仆 [49P-553MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-猫骑士-29P-338MB-08-25">阿包也是兔娘 猫骑士 [29P-338MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-莉莉娅女仆-28P-915MB-08-25">阿包也是兔娘 莉莉娅女仆 [28P-915MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-二月舰长-埃吉尔-26P-787MB-08-25">阿包也是兔娘 二月舰长 埃吉尔 [26P-787MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-11月加冕-29P-337MB-08-25">阿包也是兔娘 11月加冕 [29P-337MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-10月舰长图-龙女仆泳装-23P-507MB-08-25">阿包也是兔娘 10月舰长图 龙女仆泳装 [23P-507MB]</a></p>
+  <p><a href="https://telegra.ph/阿包也是兔娘-拉姆女仆-22P-329MB-08-25">阿包也是兔娘 拉姆女仆 [22P-329MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
