--- a/福利姬频道总目录/七七娜娜子全集/menu.html
+++ b/福利姬频道总目录/七七娜娜子全集/menu.html
@@ -13,7 +13,12 @@
   <p><a href="https://telegra.ph/%E4%B8%83%E4%B8%83%E5%A8%9C%E5%A8%9C%E5%AD%90-%E6%80%A8%E4%BB%87%E5%8A%9E%E5%85%AC%E5%AE%A4-42P1V-397MB-08-23">七七娜娜子 怨仇办公室 [42P1V-397MB]</a></p>
   <p><a href="https://telegra.ph/七七娜娜子-樫野牛牛女仆-42P7V-363MB-08-24">七七娜娜子 樫野牛牛女仆 [42P7V-363MB]</a></p>
   <p><a href="https://telegra.ph/七七娜娜子-久岐忍同人-41P9V-319MB-08-24">七七娜娜子 久岐忍同人 [41P9V-319MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/七七娜娜子-雪拉-67P3V-448MB-08-25">七七娜娜子 雪拉 [67P3V-448MB]</a></p>
+  <p><a href="https://telegra.ph/七七娜娜子-碧蓝航线-光荣新春-47P-268MB-08-25">七七娜娜子 碧蓝航线 光荣新春 [47P-268MB]</a></p>
+  <p><a href="https://telegra.ph/七七娜娜子-小僵尸-29P1V-252MB-08-25">七七娜娜子 小僵尸 [29P1V-252MB]</a></p>
+  <p><a href="https://telegra.ph/七七娜娜子-布莱默顿新春旗袍-108P6V-770MB-08-25">七七娜娜子 布莱默顿新春旗袍 [108P6V-770MB]</a></p>
+  <p><a href="https://telegra.ph/七七娜娜子-竞泳40P3V-08-25">七七娜娜子 竞泳[40P+3V]</a></p>
+  <p><a href="https://telegra.ph/七七娜娜子-金莲65P2V-08-25">七七娜娜子 金莲[65P+2V]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
