--- a/福利姬频道总目录/七月喵子全集/menu.html
+++ b/福利姬频道总目录/七月喵子全集/menu.html
@@ -18,7 +18,18 @@
   <p><a href="https://telegra.ph/%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E9%BB%91%E5%85%94%E4%B8%9D-08-21">七月喵子 黑兔丝</a></p>
   <p><a href="https://telegra.ph/%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E6%AD%BB%E4%B9%8B%E5%AE%AB%E7%8E%AF%E5%A5%88-08-21">七月喵子 死之宫环奈</a></p>
   <p><a href="https://telegra.ph/%E4%B8%83%E6%9C%88%E5%96%B5%E5%AD%90-%E5%B0%91%E5%A5%B3%E5%BF%83%E4%BA%8B-34P3V-170MB-08-23">七月喵子 少女心事 [34P3V-170MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集月食-捷克提亚22P-248MB-08-25">七月喵子 幻想兽娘集月食 捷克提亚[22P-248MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集日食-帕尼卡多拉-20P-239MB-08-25">七月喵子 幻想兽娘集日食 帕尼卡多拉 [20P-239MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集日食-蒂迟亚希24-303MB-08-25">七月喵子 幻想兽娘集日食 蒂迟亚希[24-303MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集日食本-玛琪多-08-25">七月喵子 幻想兽娘集日食本 玛琪多</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集-日食本-艾路-08-25">七月喵子 幻想兽娘集 日食本 艾路</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集月食-星图-22P-239MB-08-25">七月喵子 幻想兽娘集月食 星图 [22P-239MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集月食-纳菲-20P-271MB-08-25">七月喵子 幻想兽娘集月食 纳菲 [20P-271MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集月食-克丝古-18P-206MB-08-25">七月喵子 幻想兽娘集月食 克丝古 [18P-206MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集月食-火狄娅-23P-299MB-08-25">七月喵子 幻想兽娘集月食 火狄娅 [23P-299MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集日食-伊卡-22P-226MB-08-25">七月喵子 幻想兽娘集日食 伊卡 [22P-226MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集日食-牙牙-26P-271MB-08-25">七月喵子 幻想兽娘集日食 牙牙 [26P-271MB]</a></p>
+  <p><a href="https://telegra.ph/七月喵子-幻想兽娘集月食-波克塔耶子-25P-302MB-08-25">七月喵子 幻想兽娘集月食 波克塔耶子 [25P-302MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
