--- a/福利姬频道总目录/九言全集/menu.html
+++ b/福利姬频道总目录/九言全集/menu.html
@@ -62,8 +62,11 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E4%BF%AE%E5%A5%B3%E4%B8%8E%E7%8B%97-60P6V-08-23">九言 修女与狗 60P6V</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E7%BA%AF%E7%99%BD%E5%B9%BB%E6%83%B3-08-23">九言 纯白幻想</a></p>  
   <p><a href="https://telegra.ph/%E4%B9%9D%E8%A8%80-%E6%96%91%E7%82%B9%E4%BF%AE%E7%8C%AB-08-23">九言 斑点修猫</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p> 
+  <p><a href="https://telegra.ph/九言-冰淇淋-08-24">九言 冰淇淋</a></p>
+  <p><a href="https://telegra.ph/九言-拉毗-08-24">九言 拉毗</a></p>
+  <p><a href="https://telegra.ph/九言-路易九世-08-25">九言 路易九世</a></p>
+  <p><a href="https://telegra.ph/九言-不听话的妹妹-08-25">九言 不听话的妹妹</a></p>
+  <p><a href="https://telegra.ph/九言-猫耳娘的裙底-08-25">九言 猫耳娘的裙底</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p> 
