--- a/福利姬频道总目录/伊喵君_Nya全集/menu.html
+++ b/福利姬频道总目录/伊喵君_Nya全集/menu.html
@@ -11,7 +11,11 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E4%BC%8A%E5%96%B5%E5%90%9B-Nya---%E6%A1%83%E6%99%AF%E4%B8%89%E9%85%AA%E5%8E%9F%E7%A5%9E-%E9%B8%A3%E7%A5%9E%E5%8F%8C%E4%BA%BA-%E5%85%AB%E9%87%8D%E9%9B%B7%E7%A5%9E-%E5%8F%8C%E5%80%8D%E5%BF%AB%E4%B9%90-57P1V-129GB-08-20">伊喵君_Nya - &桃景三酪《原神-鸣神双人》 八重&雷神 双倍快乐 [57P1V-1.29GB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/伊喵君-Nya-中秋礼物-80P2V-861MB-08-24">伊喵君_Nya 中秋礼物 [80P2V-861MB]</a></p>
+  <p><a href="https://telegra.ph/伊喵君-Nya-碧蓝航线-小光辉-19P-70MB-08-24">伊喵君_Nya 碧蓝航线 小光辉 [19P-70MB]</a></p>
+  <p><a href="https://telegra.ph/伊喵君-Nya-初音-08-25">伊喵君_Nya 初音</a></p>
+  <p><a href="https://telegra.ph/伊喵君-Nya萝贝莉雅-08-25">伊喵君_Nya《萝贝莉雅》</a></p>
+  <p><a href="https://telegra.ph/伊喵君-Nya-碧蓝航线-黎塞留泳装-30P-263MB-08-25">伊喵君_Nya 碧蓝航线 黎塞留泳装 [30P-263MB]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
