--- a/福利姬频道总目录/您的蛋蛋全集/menu.html
+++ b/福利姬频道总目录/您的蛋蛋全集/menu.html
@@ -16,7 +16,12 @@
   <p><a href="https://telegra.ph/%E6%82%A8%E7%9A%84%E8%9B%8B%E8%9B%8B-%E4%BF%98%E8%8E%B7%E5%88%B6%E6%9C%8D-81P-08-23">您的蛋蛋 俘获制服 81P</a></p>
   <p><a href="https://telegra.ph/%E6%82%A8%E7%9A%84%E8%9B%8B%E8%9B%8B-%E6%BA%90%E8%B5%96%E5%85%89%E5%83%B5%E5%B0%B8-40P1V-179MB-08-23">您的蛋蛋 源赖光僵尸 [40P1V-179MB]</a></p>
   <p><a href="https://telegra.ph/%E6%82%A8%E7%9A%84%E8%9B%8B%E8%9B%8B-%E4%BD%A0%E7%9A%84%E7%8B%90%E4%BB%99%E5%A5%B3%E5%8F%8B-08-23">您的蛋蛋 你的狐仙女友</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/您的蛋蛋-黑社会大小姐-08-24">您的蛋蛋 黑社会大小姐</a></p>
+  <p><a href="https://telegra.ph/您的蛋蛋-尾随-08-25">您的蛋蛋 尾随</a></p>
+  <p><a href="https://telegra.ph/您的蛋蛋-思春期1月4打赏群资源-08-25">您的蛋蛋 思春期（1月4打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/您的蛋蛋-自拍圣诞斗篷12月25打赏群资源-08-25">您的蛋蛋 自拍圣诞斗篷（12月25打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/您的蛋蛋-不良少女12月9打赏群资源-08-25">您的蛋蛋 不良少女（12月9打赏群资源）</a></p>
+  <p><a href="https://telegra.ph/您的蛋蛋-草莓蛋糕-08-25">您的蛋蛋 草莓蛋糕</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
