--- a/福利姬频道总目录/日奈娇全集/menu.html
+++ b/福利姬频道总目录/日奈娇全集/menu.html
@@ -40,7 +40,14 @@
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%A2%A7%E8%93%9D%E6%A1%A3%E6%A1%88%E5%A6%83%E5%92%B2-92P-492MB-08-23">日奈娇 碧蓝档案妃咲 [92P-492MB]</a></p>
   <p><a href="https://telegra.ph/%E5%88%87%E5%88%87celia-%E9%9B%85%E5%84%BF%E8%B4%9D%E5%BE%B7-39P-08-23">切切celia 雅儿贝德 39P</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E4%BC%8A%E8%8A%99%E5%A4%8F%E5%A8%8392P-665M-08-23">日奈娇 伊芙夏娃[92P-665M]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/日奈娇-神通-101P1V-172GB-08-24">日奈娇 神通 [101P1V-1.72GB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇-海梦兔子内衣-35P-141MB-08-24">日奈娇 海梦兔子内衣 [35P-141MB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇-海梦兔女郎30P-252MB-08-24">日奈娇 海梦兔女郎[30P-252MB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇-衬衫小狗-160P-181GB-08-25">日奈娇 衬衫小狗 [160P-1.81GB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇-黄豆粉-159P-112GB-08-25">日奈娇 黄豆粉 [159P-1.12GB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇-吉他妹妹-81P-561MB-08-25">日奈娇 吉他妹妹 [81P-561MB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇-内普提斯-75P-729MB-08-25">日奈娇 内普提斯 [75P-729MB]</a></p>
+  <p><a href="https://telegra.ph/日奈娇-甘雨女仆23P-394M-08-25">日奈娇 甘雨女仆[23P-394M]</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
