--- a/福利姬频道总目录/柒柒不可爱全集/menu.html
+++ b/福利姬频道总目录/柒柒不可爱全集/menu.html
@@ -34,5 +34,8 @@
   <p><a href="https://telegra.ph/柒柒不可爱-雾纱裙-08-24">柒柒不可爱 雾纱裙</a></p>
   <p><a href="https://telegra.ph/柒柒不可爱-海岚51P-878MB-08-24">柒柒不可爱 海岚[51P-878MB]</a></p>
   <p><a href="https://telegra.ph/柒柒不可爱-技水着Part-III-08-24">柒柒不可爱 技水着Part. III</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-夏树繁花-08-24">柒柒不可爱 夏树繁花</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-少女记实录-76P-127GB-08-25">柒柒不可爱 少女记实录 [76P-1.27GB]</a></p>
+  <p><a href="https://telegra.ph/柒柒不可爱-街拍黑皮裙-08-25">柒柒不可爱 街拍黑皮裙</a></p>
 </body>
 </html>
